<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/dialog_container"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <LinearLayout
        android:padding="16dp"
        android:background="@drawable/stroke_imageview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.4"
        android:gravity="center"

        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <TextView
        android:textColor="@color/green_light"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/gender_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gender Character"/>

    <RadioGroup
        android:orientation="horizontal"
        android:background="@color/gray"
        android:id="@+id/radio_group_gender"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleSelection="true">

        <RadioButton
            android:id="@+id/radio_male"
            style="@style/RadioBtn"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radio_female"
            style="@style/RadioBtn"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/radio_gender_unknown"
            style="@style/RadioBtn"
            android:text="@string/unknown" />

    </RadioGroup>

    <TextView
        android:id="@+id/txt_status"
        android:textColor="@color/green_light"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Status Character"/>

    <RadioGroup
        android:id="@+id/radio_group_status"
        app:layout_constraintTop_toBottomOf="@+id/txt_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_live"
            style="@style/RadioBtn"
            android:text="@string/live" />

        <RadioButton
            android:id="@+id/radio_dead"
            style="@style/RadioBtn"
            android:text="@string/dead" />

        <RadioButton
            android:id="@+id/radio_status_unknown"
            style="@style/RadioBtn"
            android:text="@string/unknown" />

    </RadioGroup>

    <Button
        android:id="@+id/applyfilter"
        android:background="@drawable/btn_stroke"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/radio_group_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/green_light"
        android:text="@string/aplicarfiltro"/>

    </LinearLayout>




</LinearLayout>